# vulkan_render_engine

./: Cargo.toml  README.md  custom_file_format_spec.txt  dependencies  render_doc.cap
assets/: my_assets.json
assets/fonts/: note.txt
assets/prefab_scenes/: bench.scn  composite_thing.json  pivot_node_basic.json  proto.scn  scene_instance_node.json
shaders/: build.sh
shaders/spirv/: mesh_prim.frag.spv  mesh_prim.vert.spv  mesh_prim_unlit.frag.spv  skinning.comp.spv  ui_font.frag.spv  ui_quad.vert.spv  ui_solid_color.frag.spv
shaders/src/: mesh_prim.frag  mesh_prim.vert  mesh_prim_unlit.frag  skinning.comp  ui_font.frag  ui_quad.vert  ui_solid_color.frag
src/: animation.rs  bad_scene.rs  console.rs  gltf_importer.rs  main.rs  mesh_primitive.rs  quad_font.rs  scene.rs  scn_grammar.pest  ui_tree.rs  vk_ash_renderer.rs  vk_renderer.rs
src/vk_ash_renderer/: vk_bump_manager.rs  vk_material_manager.rs  vk_mesh_manager.rs  vk_rgba_manager.rs  vk_slab_manager.rs
