[profile.release]
debug = true


[profile.dev]
opt-level = 1

[package]
name = "vulkanoGraphicsTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
ash = { version = "0.38", features = ["loaded"] }
ash-window = "0.13.0"
gpu-allocator = "0.25.0" # todo: remove this
rand = "0.8.5"
glam = "0.27.0"
gltf = "1.4.0"
vk-mem = "0.4.0"
image = "0.25.1"
json = "0.12.4"
generational-arena = "0.2.9"
mikktspace = "0.3.0"
fontsdf = "0.5.1"
regex = "1.10.5"
bytemuck = { version = "1.16.3", features = ["derive"] }
pest = "2.7.11"
pest_derive = "2.7.11"
anyhow = "1.0.86"
serde_json = "1.0"